2/26/13 use i18n release instead of submodule fork
2/26/13 upgrade contrib to latest versions
2/26/13 migrate images loader to phetcommon
2/26/13 add images and overlay to debug and release html files
2/26/13 integrate jquery.imagesloaded into requirejs config
2/26/13 delete config/image-0.2.1.js, not using
2/26/13 encapsulate imagesloaded in ImagesLoader
2/26/13 add overlay hack to top-level html, to prevent seeing images briefly
2/26/13 initialize view after all images have been loaded
2/26/13 use <img> + imagesloaded + jquery to load images
2/26/13 dump requirejs image plugin, because it doesn't work after applying grunt
2/26/13 update to easeljs-0.6.0
2/26/13 migrate PerformanceMonitor and its dependency (stats.js) to phetcommon from example-sim
2/25/13 clean up .gitignore, don't need to specify stuff inside deploy/
2/25/13 remove <script ..."requirejs"> from example-sim-debug.html, almond has been concat'ed at this point
2/25/13 added comments to package.json using "//" key hack
2/25/13 more detailed/general doc in config.js
2/25/13 cleanup, document and reorder Gruntfile.js
2/25/13 fix specification of jshint globals in Gruntfile.js, to silence "'define' is undefined" complaints
2/25/13 add missing semicolons identified by jshint
2/25/13 revert to composition for implementation of PerformanceMonitor, no need for inheritance
2/25/13 change package.json to specify non-fuzzy versions for dependencies (recommended by SB)
2/25/13 turn off uglify name mangling to make debugging easier
2/25/13 delete "dependencies" entry in package.json, SB says we only need "devDependencies" (the default)
2/25/13 document package.json in README.md, because JSON doesn't support comments
2/16/13 changelog change to test git-aware bash prompt
2/16/13 fix example-sim-debug.html, check in example-sim-release.html (for grunt testing)
2/16/13 reformat grunt.js with 2-space indents
2/16/13 check in almond-0.2.5.js, shim loader for use with grunt