@@ -1,2 +1,5 @@
 Put sim-specific JavaScript files under this directory.
 Use subdirectories to organize your code, for example model/ and view/.
+
+NOTE: This repository expects its dependent repositories (phetcommon, easel-phet) to
+be checked out as siblings in the directory hierarchy.
