@@ -1,3 +1,4 @@
+3/6/13 expect dependent repositories (phetcommon, easel-phet) to be checked out as siblings in the directory hierarchy
 2/26/13 use i18n release instead of submodule fork
 2/26/13 upgrade contrib to latest versions
 2/26/13 migrate images loader to phetcommon
